--- a/colorscript.1
+++ b/colorscript.1
@@ -1,4 +1,4 @@
-.TH "colorscript" "1" 
+.TH "colorscript" "1"
 
 .SH "NAME"
 .PP
@@ -50,4 +50,5 @@ Runs a specific shell color script.
 
 .SH "AUTHOR"
 .PP
-Derek Taylor (\fIhttps://gitlab.com/dwt1/shell-color-scripts\fP) 
+Derek Taylor (\fIhttps://gitlab.com/dwt1/shell-color-scripts\fP)
+Conner Will (\fIhttps://github.com/ConnerWill/shell-color-scripts\fP)
