--- a/man.org
+++ b/man.org
@@ -1,5 +1,5 @@
 #+TITLE: colorscript
-#+AUTHOR: Derek Taylor (https://gitlab.com/dwt1/shell-color-scripts/)
+#+AUTHOR: Conner Will (https://github.com/ConnerWill/shell-color-scripts/)
 
 * NAME
 colorscript - run various shell color scripts
@@ -37,4 +37,5 @@ Get a complete listing of available shell color scripts.  You get the INDEX (num
 Runs a specific shell color script.
 
 * AUTHOR
-Derek Taylor (https://gitlab.com/dwt1/shell-color-scripts) 
+Derek Taylor (https://gitlab.com/dwt1/shell-color-scripts)
+Conner Will (https://github.com/ConnerWill/shell-color-scripts)
